Re-gen dist files

--- a/features/abs-sign.yml.dist
+++ b/features/abs-sign.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "135"
+    chrome_android: "135"
     firefox: "118"
     firefox_android: "118"
     safari: "15.4"
