--- a/features/canvas-2d-alpha.yml.dist
+++ b/features/canvas-2d-alpha.yml.dist
@@ -6,7 +6,7 @@ status:
   support:
     chrome: "32"
     chrome_android: "32"
-    edge: ≤79
+    edge: "79"
     firefox: "30"
     firefox_android: "30"
 compat_features:
