--- a/features/column-breaks.yml.dist
+++ b/features/column-breaks.yml.dist
@@ -38,22 +38,22 @@ compat_features:
   # baseline_low_date: 2021-09-07
   # baseline_high_date: 2024-03-07
   # support:
-  #   chrome: ≤80
-  #   chrome_android: ≤80
-  #   edge: ≤80
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "79"
   #   firefox: "92"
   #   firefox_android: "92"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: "10"
+  #   safari_ios: "10"
   - css.properties.break-inside.avoid-column
 
   # baseline: false
   # support:
-  #   chrome: ≤80
-  #   chrome_android: ≤80
-  #   edge: ≤80
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   chrome: "50"
+  #   chrome_android: "50"
+  #   edge: "79"
+  #   safari: "10"
+  #   safari_ios: "10"
   - css.properties.break-after.avoid-column
   - css.properties.break-after.column
   - css.properties.break-before.avoid-column
