--- a/features/contenteditable-plaintextonly.yml.dist
+++ b/features/contenteditable-plaintextonly.yml.dist
@@ -7,7 +7,7 @@ status:
   support:
     chrome: "51"
     chrome_android: "51"
-    edge: ≤79
+    edge: "12"
     firefox: "136"
     firefox_android: "136"
     safari: ≤13.1
@@ -18,7 +18,7 @@ compat_features:
   # support:
   #   chrome: "51"
   #   chrome_android: "51"
-  #   edge: ≤79
+  #   edge: "12"
   #   firefox: "136"
   #   firefox_android: "136"
   #   safari: "5.1"
@@ -31,7 +31,7 @@ compat_features:
   # support:
   #   chrome: "51"
   #   chrome_android: "51"
-  #   edge: ≤79
+  #   edge: "12"
   #   firefox: "136"
   #   firefox_android: "136"
   #   safari: ≤13.1
