--- a/features/cookie-store.yml.dist
+++ b/features/cookie-store.yml.dist
@@ -8,6 +8,13 @@ status:
     chrome_android: "87"
     edge: "87"
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "87"
+  #   chrome_android: "87"
+  #   edge: "87"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - api.CookieChangeEvent
   - api.CookieChangeEvent.CookieChangeEvent
   - api.CookieChangeEvent.changed
@@ -16,6 +23,21 @@ compat_features:
   - api.CookieStore.change_event
   - api.CookieStore.delete
   - api.CookieStore.get
+  - api.CookieStore.getAll
+  - api.CookieStore.set
+  - api.ExtendableCookieChangeEvent
+  - api.ExtendableCookieChangeEvent.ExtendableCookieChangeEvent
+  - api.ExtendableCookieChangeEvent.changed
+  - api.ExtendableCookieChangeEvent.deleted
+  - api.ServiceWorkerGlobalScope.cookieStore
+  - api.Window.cookieStore
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "87"
+  #   chrome_android: "87"
+  #   edge: "87"
   - api.CookieStore.get.domain_return_property
   - api.CookieStore.get.expires_return_property
   - api.CookieStore.get.name_return_property
@@ -23,17 +45,9 @@ compat_features:
   - api.CookieStore.get.sameSite_return_property
   - api.CookieStore.get.secure_return_property
   - api.CookieStore.get.value_return_property
-  - api.CookieStore.getAll
-  - api.CookieStore.set
   - api.CookieStoreManager
   - api.CookieStoreManager.getSubscriptions
   - api.CookieStoreManager.subscribe
   - api.CookieStoreManager.unsubscribe
-  - api.ExtendableCookieChangeEvent
-  - api.ExtendableCookieChangeEvent.ExtendableCookieChangeEvent
-  - api.ExtendableCookieChangeEvent.changed
-  - api.ExtendableCookieChangeEvent.deleted
-  - api.ServiceWorkerGlobalScope.cookieStore
   - api.ServiceWorkerGlobalScope.cookiechange_event
   - api.ServiceWorkerRegistration.cookies
-  - api.Window.cookieStore
