--- a/features/draft/spec/audio-output.yml.dist
+++ b/features/draft/spec/audio-output.yml.dist
@@ -11,6 +11,8 @@ compat_features:
   #   chrome: "49"
   #   edge: "17"
   #   firefox: "116"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - api.HTMLMediaElement.setSinkId
   - api.HTMLMediaElement.sinkId
 
