--- a/features/draft/spec/css-overflow-5.yml.dist
+++ b/features/draft/spec/css-overflow-5.yml.dist
@@ -5,6 +5,10 @@ status:
   baseline: false
   support: {}
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "135"
+  #   chrome_android: "135"
   - css.selectors.scroll-button
   - css.selectors.scroll-button.block-end
   - css.selectors.scroll-button.block-start
@@ -12,9 +16,17 @@ compat_features:
   - css.selectors.scroll-button.inline-end
   - css.selectors.scroll-button.inline-start
   - css.selectors.scroll-button.left
-  - css.selectors.scroll-button.next
-  - css.selectors.scroll-button.prev
   - css.selectors.scroll-button.right
   - css.selectors.scroll-button.star
   - css.selectors.scroll-button.up
+
+  # baseline: false
+  # support:
+  #   chrome: "135"
   - css.selectors.target-current
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support: {}
+  - css.selectors.scroll-button.next
+  - css.selectors.scroll-button.prev
