--- a/features/draft/spec/selection-api.yml.dist
+++ b/features/draft/spec/selection-api.yml.dist
@@ -6,12 +6,12 @@ status:
   support: {}
 compat_features:
   # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
   # support:
   #   chrome: "1"
   #   chrome_android: "18"
-  #   edge: ≤79
+  #   edge: "17"
   #   firefox: "55"
   #   firefox_android: "55"
   #   safari: "1.3"
@@ -19,12 +19,12 @@ compat_features:
   - api.Selection.collapse.offset_parameter_optional
 
   # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
   # support:
   #   chrome: "1"
   #   chrome_android: "18"
-  #   edge: ≤79
+  #   edge: "17"
   #   firefox: "55"
   #   firefox_android: "55"
   #   safari: "3.1"
@@ -33,12 +33,12 @@ compat_features:
   - api.Selection.extend.offset_parameter_optional
 
   # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
+  # baseline_low_date: 2018-04-30
+  # baseline_high_date: 2020-10-30
   # support:
   #   chrome: "39"
   #   chrome_android: "39"
-  #   edge: ≤79
+  #   edge: "17"
   #   firefox: "55"
   #   firefox_android: "55"
   #   safari: "1.3"
