--- a/features/float16array.yml.dist
+++ b/features/float16array.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "135"
+    chrome_android: "135"
     firefox: "129"
     firefox_android: "129"
     safari: "18.2"
