--- a/features/font-width.yml.dist
+++ b/features/font-width.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    safari: "18.4"
 compat_features:
   - css.properties.font-width
   - css.properties.font-width.condensed
