--- a/features/logical-properties.yml.dist
+++ b/features/logical-properties.yml.dist
@@ -206,6 +206,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "135"
+  #   chrome_android: "135"
   #   firefox: "69"
   #   firefox_android: "79"
   - css.properties.overflow-block
@@ -213,6 +215,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "135"
+  #   chrome_android: "135"
   #   firefox: "112"
   #   firefox_android: "112"
   - css.properties.overflow-block.overlay
