--- a/features/offline-audio-context.yml.dist
+++ b/features/offline-audio-context.yml.dist
@@ -90,7 +90,7 @@ compat_features:
   # support:
   #   chrome: "62"
   #   chrome_android: "62"
-  #   edge: ≤79
+  #   edge: "79"
   #   firefox: "57"
   #   firefox_android: "57"
   #   safari: "14.1"
