--- a/features/partitioned-cookies.yml.dist
+++ b/features/partitioned-cookies.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "114"
     chrome_android: "114"
     edge: "114"
+    safari: "18.4"
+    safari_ios: "18.4"
 compat_features:
   - api.CookieStore.delete.partitioned_option
   - api.CookieStore.get.partitioned_return_property
