--- a/features/scroll-markers.yml.dist
+++ b/features/scroll-markers.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "135"
 compat_features:
   - css.properties.scroll-marker-group
   - css.properties.scroll-marker-group.after
