--- a/features/wasm-exnref-exceptions.yml.dist
+++ b/features/wasm-exnref-exceptions.yml.dist
@@ -6,5 +6,7 @@ status:
   support:
     firefox: "131"
     firefox_android: "131"
+    safari: "18.4"
+    safari_ios: "18.4"
 compat_features:
   - webassembly.exceptionsFinal
