--- a/features/alignment-baseline.yml.dist
+++ b/features/alignment-baseline.yml.dist
@@ -4,32 +4,16 @@
 status:
   baseline: false
   support:
-    chrome: ≤80
-    chrome_android: ≤80
-    edge: ≤80
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    chrome: "1"
+    chrome_android: "18"
+    edge: "79"
+    safari: "5.1"
+    safari_ios: "5"
 compat_features:
-  # baseline: false
-  # support:
-  #   chrome: "1"
-  #   chrome_android: "18"
-  #   edge: "79"
-  #   safari: "5.1"
-  #   safari_ios: "5"
   - css.properties.alignment-baseline
+  - css.properties.alignment-baseline.alphabetic
   - css.properties.alignment-baseline.baseline
   - css.properties.alignment-baseline.central
   - css.properties.alignment-baseline.ideographic
   - css.properties.alignment-baseline.mathematical
   - css.properties.alignment-baseline.middle
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   chrome: ≤80
-  #   chrome_android: ≤80
-  #   edge: ≤80
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - css.properties.alignment-baseline.alphabetic
