--- a/features/atomics-pause.yml.dist
+++ b/features/atomics-pause.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "133"
     chrome_android: "133"
     edge: "133"
+    safari: "18.4"
+    safari_ios: "18.4"
 compat_features:
   - javascript.builtins.Atomics.pause
