--- a/features/attr.yml.dist
+++ b/features/attr.yml.dist
@@ -5,13 +5,16 @@ status:
   baseline: false
   support: {}
 compat_features:
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2025-03-31
   # support:
   #   chrome: "133"
   #   chrome_android: "133"
   #   edge: "133"
   #   firefox: "119"
   #   firefox_android: "119"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - css.types.attr.fallback
 
   # baseline: false
