--- a/features/baseline-shift.yml.dist
+++ b/features/baseline-shift.yml.dist
@@ -4,11 +4,11 @@
 status:
   baseline: false
   support:
-    chrome: ≤80
-    chrome_android: ≤80
-    edge: ≤80
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    chrome: "1"
+    chrome_android: "18"
+    edge: "79"
+    safari: "4"
+    safari_ios: "3.2"
 compat_features:
   - css.properties.baseline-shift
   - css.properties.baseline-shift.baseline
