--- a/features/display-table.yml.dist
+++ b/features/display-table.yml.dist
@@ -3,16 +3,16 @@
 
 status:
   baseline: high
-  baseline_low_date: ≤2020-03-24
-  baseline_high_date: ≤2022-09-24
+  baseline_low_date: ≤2017-04-05
+  baseline_high_date: ≤2019-10-05
   support:
-    chrome: ≤80
-    chrome_android: ≤80
-    edge: ≤80
+    chrome: "1"
+    chrome_android: "18"
+    edge: ≤15
     firefox: "3"
     firefox_android: "4"
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: ≤4
+    safari_ios: ≤3.2
 compat_features:
   # baseline: high
   # baseline_low_date: 2015-07-29
@@ -48,14 +48,14 @@ compat_features:
   - css.properties.display.inline-table
 
   # baseline: high
-  # baseline_low_date: ≤2020-03-24
-  # baseline_high_date: ≤2022-09-24
+  # baseline_low_date: ≤2017-04-05
+  # baseline_high_date: ≤2019-10-05
   # support:
-  #   chrome: ≤80
-  #   chrome_android: ≤80
-  #   edge: ≤80
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: ≤15
   #   firefox: "1"
   #   firefox_android: "4"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: ≤4
+  #   safari_ios: ≤3.2
   - css.properties.display.table-caption
