--- a/features/draft/spec/css-color-hdr-1.yml.dist
+++ b/features/draft/spec/css-color-hdr-1.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "135"
+    chrome_android: "135"
 compat_features:
   - css.properties.dynamic-range-limit
   - css.properties.dynamic-range-limit.constrained-high
