--- a/features/draft/spec/css-ui-4.yml.dist
+++ b/features/draft/spec/css-ui-4.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "135"
 compat_features:
   - css.properties.interactivity
   - css.properties.interactivity.auto
