--- a/features/draft/spec/image-capture.yml.dist
+++ b/features/draft/spec/image-capture.yml.dist
@@ -13,10 +13,11 @@ compat_features:
   #   chrome: "59"
   #   chrome_android: "59"
   #   edge: "79"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - api.ImageCapture
   - api.ImageCapture.ImageCapture
   - api.ImageCapture.getPhotoCapabilities
-  - api.ImageCapture.grabFrame
   - api.ImageCapture.track
 
   # baseline: false
@@ -24,12 +25,22 @@ compat_features:
   #   chrome: "60"
   #   chrome_android: "60"
   #   edge: "79"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - api.ImageCapture.takePhoto
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "61"
   #   chrome_android: "61"
   #   edge: "79"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - api.ImageCapture.getPhotoSettings
+
+  # baseline: false
+  # support:
+  #   chrome: "59"
+  #   chrome_android: "59"
+  #   edge: "79"
+  - api.ImageCapture.grabFrame
