--- a/features/draft/spec/svg-paths.yml.dist
+++ b/features/draft/spec/svg-paths.yml.dist
@@ -6,16 +6,16 @@ status:
   support: {}
 compat_features:
   # baseline: high
-  # baseline_low_date: ≤2020-07-28
-  # baseline_high_date: ≤2023-01-28
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
   # support:
-  #   chrome: ≤80
-  #   chrome_android: ≤80
-  #   edge: ≤80
-  #   firefox: ≤72
-  #   firefox_android: ≤79
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "79"
+  #   firefox: "1.5"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "2"
   - api.SVGPathElement.getPointAtLength
   - api.SVGPathElement.getTotalLength
   - api.SVGPathElement.pathLength
