--- a/features/focus-events.yml.dist
+++ b/features/focus-events.yml.dist
@@ -81,13 +81,15 @@ compat_features:
 
   # baseline: false
   # support:
+  #   firefox: "104"
+  #   firefox_android: "104"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
+  - api.HTMLElement.focus.options_focusVisible_parameter
+
+  # baseline: false
+  # support:
   #   safari: "5"
   #   safari_ios: "4.2"
   - api.Element.focusin_event
   - api.Element.focusout_event
-
-  # baseline: false
-  # support:
-  #   firefox: "104"
-  #   firefox_android: "104"
-  - api.HTMLElement.focus.options_focusVisible_parameter
