--- a/features/invoker-commands.yml.dist
+++ b/features/invoker-commands.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "135"
+    chrome_android: "135"
 compat_features:
   - api.CommandEvent
   - api.CommandEvent.CommandEvent
