--- a/features/iterator-methods.yml.dist
+++ b/features/iterator-methods.yml.dist
@@ -10,7 +10,16 @@ status:
     firefox: "131"
     firefox_android: "131"
 compat_features:
-  - javascript.builtins.Iterator.Iterator
+  # baseline: low
+  # baseline_low_date: 2025-03-31
+  # support:
+  #   chrome: "122"
+  #   chrome_android: "122"
+  #   edge: "122"
+  #   firefox: "131"
+  #   firefox_android: "131"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - javascript.builtins.Iterator.drop
   - javascript.builtins.Iterator.every
   - javascript.builtins.Iterator.filter
@@ -23,3 +32,13 @@ compat_features:
   - javascript.builtins.Iterator.some
   - javascript.builtins.Iterator.take
   - javascript.builtins.Iterator.toArray
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "122"
+  #   chrome_android: "122"
+  #   edge: "122"
+  #   firefox: "131"
+  #   firefox_android: "131"
+  - javascript.builtins.Iterator.Iterator
