--- a/features/requestclose.yml.dist
+++ b/features/requestclose.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "134"
     chrome_android: "134"
     edge: "134"
+    safari: "18.4"
+    safari_ios: "18.4"
 compat_features:
   - api.HTMLDialogElement.requestClose
