--- a/features/selection-api.yml.dist
+++ b/features/selection-api.yml.dist
@@ -201,6 +201,19 @@ compat_features:
   - api.Selection.setPosition
 
   # baseline: high
+  # baseline_low_date: 2017-10-17
+  # baseline_high_date: 2020-04-17
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "16"
+  #   firefox: "25"
+  #   firefox_android: "25"
+  #   safari: "1"
+  #   safari_ios: "1"
+  - api.Range.collapse.toStart_parameter_optional
+
+  # baseline: high
   # baseline_low_date: 2017-11-28
   # baseline_high_date: 2020-05-28
   # support:
@@ -264,19 +277,6 @@ compat_features:
   #   safari: "1.3"
   #   safari_ios: "1"
   - api.Selection.modify
-
-  # baseline: high
-  # baseline_low_date: ≤2020-01-15
-  # baseline_high_date: ≤2022-07-15
-  # support:
-  #   chrome: "1"
-  #   chrome_android: "18"
-  #   edge: ≤79
-  #   firefox: "25"
-  #   firefox_android: "25"
-  #   safari: "1"
-  #   safari_ios: "1"
-  - api.Range.collapse.toStart_parameter_optional
 
   # baseline: high
   # baseline_low_date: 2020-07-28
