--- a/features/shapes.yml.dist
+++ b/features/shapes.yml.dist
@@ -43,5 +43,9 @@ compat_features:
   - css.types.basic-shape.xywh
 
   # baseline: false
-  # support: {}
+  # support:
+  #   chrome: "135"
+  #   chrome_android: "135"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - css.types.basic-shape.shape
