--- a/features/text-autospace.yml.dist
+++ b/features/text-autospace.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    safari: "18.4"
 compat_features:
   - css.properties.text-autospace
   - css.properties.text-autospace.auto
