--- a/features/writing-mode.yml.dist
+++ b/features/writing-mode.yml.dist
@@ -44,12 +44,15 @@ compat_features:
   - css.properties.writing-mode.vertical-lr
   - css.properties.writing-mode.vertical-rl
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2025-03-31
   # support:
   #   chrome: "132"
   #   chrome_android: "132"
   #   edge: "132"
   #   firefox: "43"
   #   firefox_android: "43"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
   - css.properties.writing-mode.sideways-lr
   - css.properties.writing-mode.sideways-rl
