--- a/features/fetchlater.yml
+++ b/features/fetchlater.yml
@@ -1,5 +1,5 @@
 name: fetchLater
-description: The `fetchLater()` method requests a deferred fetch. After this method is called, the network request is queued by the browser, and is then invoked either when the document is destroyed, or after a certain time. When the request is eventually sent, the response is ignored by the browser.
+description: The `fetchLater()` method requests a deferred fetch sent at an unknown time. The browser chooses a reliable time to send the request, ideally when the document is unloaded, and ignores the response. This API is useful for sending beacons, that is sending data to a server, without expecting a particular response.
 spec: https://github.com/whatwg/fetch/pull/1647
 compat_features:
   - api.FetchLaterResult
