--- a/features/inert.yml
+++ b/features/inert.yml
@@ -2,3 +2,5 @@ name: inert
 description: The `inert` HTML attribute marks an element and its descendants as non-interactive. Inert elements don't get focus or fire `click` events.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#inert-subtrees
 group: html
+status:
+  compute_from: html.global_attributes.inert
