Adjust to renamed/removed keys and update dist

--- a/features/draft/spec/css-color-hdr-1.yml.dist
+++ b/features/draft/spec/css-color-hdr-1.yml.dist
@@ -3,11 +3,9 @@
 
 status:
   baseline: false
-  support:
-    chrome: "135"
-    chrome_android: "135"
+  support: {}
 compat_features:
   - css.properties.dynamic-range-limit
-  - css.properties.dynamic-range-limit.constrained-high
-  - css.properties.dynamic-range-limit.high
+  - css.properties.dynamic-range-limit.constrained
+  - css.properties.dynamic-range-limit.no-limit
   - css.properties.dynamic-range-limit.standard
