--- a/features/draft/spec/css-overflow-5.yml.dist
+++ b/features/draft/spec/css-overflow-5.yml.dist
@@ -9,6 +9,7 @@ compat_features:
   # support:
   #   chrome: "135"
   #   chrome_android: "135"
+  #   edge: "135"
   - css.selectors.scroll-button
   - css.selectors.scroll-button.block-end
   - css.selectors.scroll-button.block-start
@@ -23,6 +24,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "135"
+  #   edge: "135"
   - css.selectors.target-current
 
   # ⬇️ Same status as overall feature ⬇️
