--- a/features/draft/spec/css-pseudo-4.yml.dist
+++ b/features/draft/spec/css-pseudo-4.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "135"
     chrome_android: "135"
+    edge: "135"
 compat_features:
   - css.selectors.after.nested_marker
   - css.selectors.before.nested_marker
