--- a/features/draft/spec/css-ui-4.yml.dist
+++ b/features/draft/spec/css-ui-4.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "135"
+    edge: "135"
 compat_features:
   - css.properties.interactivity
   - css.properties.interactivity.auto
