--- a/features/draft/spec/tc39-math-sum.yml.dist
+++ b/features/draft/spec/tc39-math-sum.yml.dist
@@ -3,6 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "137"
+    firefox_android: "137"
 compat_features:
   - javascript.builtins.Math.sumPrecise
