--- a/features/hyphenate-limit-chars.yml.dist
+++ b/features/hyphenate-limit-chars.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "109"
     chrome_android: "109"
     edge: "109"
+    firefox: "137"
+    firefox_android: "137"
 compat_features:
   - css.properties.hyphenate-limit-chars
   - css.properties.hyphenate-limit-chars.auto
