--- a/features/logical-properties.yml.dist
+++ b/features/logical-properties.yml.dist
@@ -208,6 +208,7 @@ compat_features:
   # support:
   #   chrome: "135"
   #   chrome_android: "135"
+  #   edge: "135"
   #   firefox: "69"
   #   firefox_android: "79"
   - css.properties.overflow-block
@@ -217,6 +218,7 @@ compat_features:
   # support:
   #   chrome: "135"
   #   chrome_android: "135"
+  #   edge: "135"
   #   firefox: "112"
   #   firefox_android: "112"
   - css.properties.overflow-block.overlay
