--- a/features/scroll-markers.yml.dist
+++ b/features/scroll-markers.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "135"
+    edge: "135"
 compat_features:
   - css.properties.scroll-marker-group
   - css.properties.scroll-marker-group.after
