--- a/features/draft/spec/css-color-hdr-1.yml
+++ b/features/draft/spec/css-color-hdr-1.yml
@@ -4,6 +4,6 @@ description: TODO
 spec: https://drafts.csswg.org/css-color-hdr-1/
 compat_features:
   - css.properties.dynamic-range-limit
-  - css.properties.dynamic-range-limit.constrained-high
-  - css.properties.dynamic-range-limit.high
+  - css.properties.dynamic-range-limit.constrained
+  - css.properties.dynamic-range-limit.no-limit
   - css.properties.dynamic-range-limit.standard
