--- a/features/invoker-commands.yml.dist
+++ b/features/invoker-commands.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "135"
     chrome_android: "135"
+    edge: "135"
 compat_features:
   - api.CommandEvent
   - api.CommandEvent.CommandEvent
