--- a/features/mix-blend-mode.yml.dist
+++ b/features/mix-blend-mode.yml.dist
@@ -51,6 +51,6 @@ compat_features:
 
   # baseline: false
   # support:
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: "9"
+  #   safari_ios: "9"
   - css.properties.mix-blend-mode.plus-darker
