--- a/features/picture-in-picture.yml.dist
+++ b/features/picture-in-picture.yml.dist
@@ -55,9 +55,11 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "71"
+  #   edge: "79"
   - html.elements.iframe.allow.picture-in-picture
 
   # baseline: false
   # support:
   #   chrome: "88"
+  #   edge: "88"
   - http.headers.Permissions-Policy.picture-in-picture
