--- a/features/background-position.yml.dist
+++ b/features/background-position.yml.dist
@@ -69,16 +69,16 @@ compat_features:
   - css.properties.background-position-y
 
   # baseline: high
-  # baseline_low_date: ≤2020-03-24
-  # baseline_high_date: ≤2022-09-24
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
   # support:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "79"
   #   firefox: "1"
   #   firefox_android: "4"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: "1"
+  #   safari_ios: "1"
   - css.properties.background-position.bottom
   - css.properties.background-position.center
   - css.properties.background-position.left
