--- a/features/color-adjust.yml.dist
+++ b/features/color-adjust.yml.dist
@@ -4,8 +4,8 @@
 status:
   baseline: false
   support:
-    firefox: ≤72
-    firefox_android: ≤79
+    firefox: "48"
+    firefox_android: "48"
     safari: "15.4"
     safari_ios: "15.4"
 compat_features:
