--- a/features/font-variant-position.yml.dist
+++ b/features/font-variant-position.yml.dist
@@ -4,26 +4,12 @@
 status:
   baseline: false
   support:
-    firefox: ≤72
-    firefox_android: ≤79
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    firefox: "34"
+    firefox_android: "34"
+    safari: "9.1"
+    safari_ios: "9.3"
 compat_features:
-  # baseline: false
-  # support:
-  #   firefox: "34"
-  #   firefox_android: "34"
-  #   safari: "9.1"
-  #   safari_ios: "9.3"
   - css.properties.font-variant-position
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   firefox: ≤72
-  #   firefox_android: ≤79
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
   - css.properties.font-variant-position.normal
   - css.properties.font-variant-position.sub
   - css.properties.font-variant-position.super
