--- a/features/text-emphasis.yml.dist
+++ b/features/text-emphasis.yml.dist
@@ -30,6 +30,13 @@ compat_features:
   - css.properties.text-emphasis-color
   - css.properties.text-emphasis-position
   - css.properties.text-emphasis-style
+  - css.properties.text-emphasis-style.circle
+  - css.properties.text-emphasis-style.dot
+  - css.properties.text-emphasis-style.double-circle
+  - css.properties.text-emphasis-style.filled
+  - css.properties.text-emphasis-style.none
+  - css.properties.text-emphasis-style.sesame
+  - css.properties.text-emphasis-style.triangle
 
   # baseline: high
   # baseline_low_date: 2022-03-03
@@ -45,25 +52,6 @@ compat_features:
   - css.properties.text-emphasis-position.left
   - css.properties.text-emphasis-position.right
 
-  # baseline: high
-  # baseline_low_date: 2022-03-03
-  # baseline_high_date: 2024-09-03
-  # support:
-  #   chrome: "99"
-  #   chrome_android: "99"
-  #   edge: "99"
-  #   firefox: ≤72
-  #   firefox_android: ≤79
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - css.properties.text-emphasis-style.circle
-  - css.properties.text-emphasis-style.dot
-  - css.properties.text-emphasis-style.double-circle
-  - css.properties.text-emphasis-style.filled
-  - css.properties.text-emphasis-style.none
-  - css.properties.text-emphasis-style.sesame
-  - css.properties.text-emphasis-style.triangle
-
   # baseline: low
   # baseline_low_date: 2022-12-13
   # support:
@@ -72,8 +60,8 @@ compat_features:
   #   edge: "99"
   #   firefox: "108"
   #   firefox_android: "108"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: "7"
+  #   safari_ios: "7"
   - css.properties.text-emphasis-position.over
   - css.properties.text-emphasis-position.under
 
