--- a/features/print-color-adjust.yml
+++ b/features/print-color-adjust.yml
@@ -1,4 +1,4 @@
-name: Print color adjust
+name: print-color-adjust
 description: The `print-color-adjust` CSS property sets whether styles of printed pages should be adjusted to use less ink, in cases such as light text on a dark background.
 spec: https://drafts.csswg.org/css-color-adjust-1/#propdef-print-color-adjust
 group: print
