Add :hover BCD subfeatures to User action pseudo-classes
This doesn't change any versions/dates.

--- a/features/user-action-pseudos.yml
+++ b/features/user-action-pseudos.yml
@@ -10,3 +10,5 @@ compat_features:
   - css.selectors.active.non_a_elements
   - css.selectors.focus
   - css.selectors.hover
+  - css.selectors.hover.a_elements
+  - css.selectors.hover.all_elements
