--- a/features/user-action-pseudos.yml.dist
+++ b/features/user-action-pseudos.yml.dist
@@ -42,3 +42,5 @@ compat_features:
   #   safari: "2"
   #   safari_ios: "1"
   - css.selectors.hover
+  - css.selectors.hover.a_elements
+  - css.selectors.hover.all_elements
