Add Observable API

--- a/features/observable.yml
+++ b/features/observable.yml
@@ -1,6 +1,5 @@
-draft_date: 2025-04-10
 name: Observable
-description: TODO
+description: The `Observable` API provides a composable, ergonomic way of handling an asynchronous stream of events.
 spec: https://wicg.github.io/observable/
 compat_features:
   - api.EventTarget.when
