--- a/features/weak-references.yml
+++ b/features/weak-references.yml
@@ -9,9 +9,9 @@ compat_features:
   - javascript.builtins.FinalizationRegistry
   - javascript.builtins.FinalizationRegistry.FinalizationRegistry
   - javascript.builtins.FinalizationRegistry.register
-  - javascript.builtins.FinalizationRegistry.symbol_as_target
+  - javascript.builtins.FinalizationRegistry.register.symbol_as_target
   - javascript.builtins.FinalizationRegistry.unregister
   - javascript.builtins.WeakRef
   - javascript.builtins.WeakRef.WeakRef
+  - javascript.builtins.WeakRef.WeakRef.symbol_as_target
   - javascript.builtins.WeakRef.deref
-  - javascript.builtins.WeakRef.symbol_as_target
