--- a/features/accent-color.yml.dist
+++ b/features/accent-color.yml.dist
@@ -5,10 +5,29 @@ status:
   baseline: false
   support:
     chrome: "93"
-    chrome_android: "93"
     edge: "93"
     firefox: "92"
     firefox_android: "92"
 compat_features:
+  # baseline: high
+  # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
+  # support:
+  #   chrome: "93"
+  #   chrome_android: "93"
+  #   edge: "93"
+  #   firefox: "92"
+  #   firefox_android: "92"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
   - css.properties.accent-color
   - css.properties.accent-color.auto
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "93"
+  #   edge: "93"
+  #   firefox: "92"
+  #   firefox_android: "92"
+  - css.properties.accent-color.maintains_contrast
