Add missing single color stop gradient keys

--- a/features/single-color-gradients.yml
+++ b/features/single-color-gradients.yml
@@ -6,3 +6,6 @@ compat_features:
   - css.types.gradient.conic-gradient.single_color_stop
   - css.types.gradient.linear-gradient.single_color_stop
   - css.types.gradient.radial-gradient.single_color_stop
+  - css.types.gradient.repeating-conic-gradient.single_color_stop
+  - css.types.gradient.repeating-linear-gradient.single_color_stop
+  - css.types.gradient.repeating-radial-gradient.single_color_stop
