--- a/features/ext-frag-depth.yml.dist
+++ b/features/ext-frag-depth.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "38"
     chrome_android: "38"
+    edge: "93"
     firefox: "47"
     safari: "9"
     safari_ios: "15"
