--- a/features/glyph-orientation-vertical.yml.dist
+++ b/features/glyph-orientation-vertical.yml.dist
@@ -4,7 +4,7 @@
 status:
   baseline: false
   support:
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: "4"
+    safari_ios: "3.2"
 compat_features:
   - css.properties.glyph-orientation-vertical
