--- a/features/page-selectors.yml.dist
+++ b/features/page-selectors.yml.dist
@@ -7,8 +7,8 @@ status:
     chrome: "85"
     chrome_android: "85"
     edge: "85"
-    safari: ≤13.1
-    safari_ios: ≤13.4
+    safari: "6"
+    safari_ios: "6"
 compat_features:
   # baseline: low
   # baseline_low_date: 2023-02-14
@@ -18,8 +18,8 @@ compat_features:
   #   edge: "85"
   #   firefox: "110"
   #   firefox_android: "110"
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
+  #   safari: "1"
+  #   safari_ios: "1"
   - css.properties.page
 
   # baseline: low
