--- a/features/meta.yml.dist
+++ b/features/meta.yml.dist
@@ -87,8 +87,9 @@ compat_features:
   #   safari_ios: "12"
   - html.elements.meta.name.referrer
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-10-18
+  # baseline_high_date: 2025-04-18
   # support:
   #   chrome: "93"
   #   chrome_android: "93"
