--- a/features/reporting.yml.dist
+++ b/features/reporting.yml.dist
@@ -30,6 +30,35 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "74"
+  #   chrome_android: "74"
+  #   edge: "79"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
+  - api.CSPViolationReportBody
+  - api.CSPViolationReportBody.blockedURL
+  - api.CSPViolationReportBody.columnNumber
+  - api.CSPViolationReportBody.disposition
+  - api.CSPViolationReportBody.documentURL
+  - api.CSPViolationReportBody.effectiveDirective
+  - api.CSPViolationReportBody.lineNumber
+  - api.CSPViolationReportBody.originalPolicy
+  - api.CSPViolationReportBody.referrer
+  - api.CSPViolationReportBody.sample
+  - api.CSPViolationReportBody.sourceFile
+  - api.CSPViolationReportBody.statusCode
+
+  # baseline: false
+  # support:
+  #   chrome: "80"
+  #   chrome_android: "80"
+  #   edge: "80"
+  #   safari: "18.4"
+  #   safari_ios: "18.4"
+  - api.CSPViolationReportBody.toJSON
+
+  # baseline: false
+  # support:
   #   chrome: "96"
   #   chrome_android: "96"
   #   edge: "96"
@@ -57,31 +86,6 @@ compat_features:
   - api.InterventionReportBody.message
   - api.InterventionReportBody.sourceFile
   - api.InterventionReportBody.toJSON
-
-  # baseline: false
-  # support:
-  #   chrome: "74"
-  #   chrome_android: "74"
-  #   edge: "79"
-  - api.CSPViolationReportBody
-  - api.CSPViolationReportBody.blockedURL
-  - api.CSPViolationReportBody.columnNumber
-  - api.CSPViolationReportBody.disposition
-  - api.CSPViolationReportBody.documentURL
-  - api.CSPViolationReportBody.effectiveDirective
-  - api.CSPViolationReportBody.lineNumber
-  - api.CSPViolationReportBody.originalPolicy
-  - api.CSPViolationReportBody.referrer
-  - api.CSPViolationReportBody.sample
-  - api.CSPViolationReportBody.sourceFile
-  - api.CSPViolationReportBody.statusCode
-
-  # baseline: false
-  # support:
-  #   chrome: "80"
-  #   chrome_android: "80"
-  #   edge: "80"
-  - api.CSPViolationReportBody.toJSON
 
   # baseline: false
   # support:
